--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Fallout4</title>
 </head>
 <body>
-    <h1>Ayuda por favor me voy a morir</h1>
+    <h1>Fallout4 web</h1>
     <img src="vault-boy.jfif" alt="">
+    <img src="yess.gif" alt="">
 </body>
 </html>
