--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Fallout4</title>
 </head>
-<body>
+<body background="fallout-wallpaper.jpg">
     <h1>Fallout4 web</h1>
     <img src="vault-boy.jfif" alt="">
     <br>
