--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head background="fallout-wallpaper.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Fallout4</title>
+    <img src="yess.gif" style="align-items: center;">
+    <title style="text-align: center;">Fallout4</title>
 </head>
-<body background="fallout-wallpaper.jpg">
-    <h1>Fallout4 web</h1>
-    <img src="vault-boy.jfif" alt="">
-    <br>
-    <img src="yess.gif" alt="">
+<body>
+    <div style="text-align: center;">
+        <h1>Fallout4 web</h1>
+        <img src="vault-boy.jfif" alt="">
+        <br>
+    </div>
 </body>
 </html>
