--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <center>
         <div>
             <center>
-                    <h1>JUGABILIDAD</h1>
+                <h1>JUGABILIDAD</h1>
             </center>
             <center>
                 <div>
@@ -102,15 +102,20 @@
                     <footer>Novedades</footer>
                 </div>
             </center>
-            <p>
-                El jugador accede a los menús a través del Pip-Boy para consultar stats, mapa, datos y objetos. Se
-                pueden encontrar cintas de juegos retro que se pueden reproducir en el Pip-Boy.
-            </p>
-            <p>
-                <center class="contenedor-imagenes">
-                    <img src="img/pip-boy-app.gif" alt="">
-                </center>
-            </p>
+            <center>
+                <div>
+                    <p>
+                        El jugador accede a los menús a través del Pip-Boy para consultar stats, mapa, datos y objetos.
+                        Se
+                        pueden encontrar cintas de juegos retro que se pueden reproducir en el Pip-Boy.
+                    </p>
+                    <p>
+                        <center class="contenedor-imagenes">
+                            <img src="img/pip-boy-app.gif" alt="">
+                        </center>
+                    </p>
+                </div>
+            </center>
         </div>
     </center>
 </body>
