--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </center>
             <center>
                 <div>
+                    <h2>Perspectiva</h2>
                     <p>La jugabilidad es similar a Fallout 3 y Fallout: New Vegas, con la posibilidad de cambiar de
                         primera a tercera persona.</p>
                     <p>
@@ -89,6 +90,7 @@
             </center>
             <center>
                 <div>
+                    <h2>Novedades</h2>
                     <p>Las novedades son el sistema de armadura dividido en piezas, construcción de bases, sistema
                         dinámico de diálogo, sistema de creación que usa cada objeto del juego como fuente de materia
                         prima y mucho más.</p>
@@ -99,11 +101,11 @@
                             <img src="img/asentamiento-fallout-4.jpg" width="34.5%" alt="">
                         </center>
                     </p>
-                    <footer>Novedades</footer>
                 </div>
             </center>
             <center>
                 <div>
+                    <h2>Pip-Boy</h2>
                     <p>
                         El jugador accede a los menús a través del Pip-Boy para consultar stats, mapa, datos y objetos.
                         Se
