--- a/Entidades.html
+++ b/Entidades.html
@@ -21,7 +21,7 @@
 
     <center>
         <header>
-            <img src="img/yeah.gif" alt="" width="5%" align="middle">LA PODEROSISIMA FALLOUT4-WEB
+            <img src="img/yeah.gif" alt="" width="5%" align="middle">FALLOUT4-WEB
         </header>
 
         <nav>
@@ -33,7 +33,7 @@
                     <h3><a href="Historia.html">HISTORIA</a></h3>
                 </li>
                 <li>
-                    <h3><a href="Entidades.html">ENTIDADES</a></h3>
+                    <h3><a href="Entidades.html">CRIATURAS</a></h3>
                 </li>
                 <li>
                     <h3><a href="Special.html">S.P.E.C.I.A.L.</a></h3>
@@ -43,19 +43,57 @@
     </center>
     <center>
         <div>
-            <h1>ENTIDADES</h1>
-            <br>
-            <p>
-                Fallout 4 es un juego de rol post-apocalíptico desarrollado por Bethesda Game Studios y publicado por
-                Bethesda Softworks. Es la quinta entrega de la saga Fallout y la octava en total. El juego se desarrolla
-                en Boston, Massachusetts.
-            </p>
-            <p>
-                La jugabilidad es muy similar a la de Fallout 3 y Fallout: New Vegas. Entre sus características
-                adicionales se incluye un nuevo sistema de armadura (que recuerda al sistema de armadura de The Elder
-                Scrolls III: Morrowind), un sistema de diálogos dinámico, un sistema de fabricación que utiliza muchos
-                de los objetos del juego como materia prima y mucho más
-            </p>
+            <center>
+                <h1>CRIATURAS</h1>
+            </center>
+            <center>
+                <div>
+                    <p>
+                        Fallout 4" presenta una variedad de criaturas mutantes y monstruosas que deambulan por el yermo
+                        post-apocalíptico. Estas criaturas han sido alteradas por la radiación y la ingeniería
+                        genética, convirtiéndolas en seres peligrosos y a menudo grotescos.
+                    </p>
+                </div>
+            </center>
+            <center>
+                <div>
+                    <h2>Mutarachas</h2>
+                    <p>
+                        Esta es una versión mutada y gigantesca de la cucaracha común. Son rápidos y ágiles, y a menudo
+                        se encuentran en áreas infestadas de radiación.
+                    </p>
+                    <h2>Mirelurks</h2>
+                    <p>
+                        Son una especie de crustáceos mutados que han evolucionado para adaptarse al medio ambiente
+                        radiactivo. Vienen en varias formas, incluyendo Mirelurks comunes, Mirelurk cazadores y Mirelurk
+                        reyes. Son conocidos por su caparazón duro y sus poderosas garras.
+                    </p>
+                    <h2>Necrofagos</h2>
+                    <p>
+                        Son humanos que han sido expuestos a una cantidad masiva de radiación y han sufrido una
+                        degeneración mental y física. Se vuelven hostiles y agresivos hacia cualquier ser vivo que
+                        encuentren. Los Necrofagos vienen en diferentes formas y tamaños.
+                    </p>
+                    <h2>Sanginarios</h2>
+                    <p>
+                        Son depredadores gigantescos y extremadamente peligrosos que se asemejan a dinosaurios mutantes.
+                        Son rápidos, fuertes y altamente resistentes, con garras afiladas y mandíbulas poderosas. Son
+                        considerados una de las criaturas más mortales del yermo.
+                    </p>
+                    <h2>Supermutantes</h2>
+                    <p>
+                        Son humanos que han sido sometidos a experimentos genéticos y están infectados con FEV (Forced
+                        Evolutionary Virus). Son altos, musculosos y agresivos, con una resistencia sobrehumana y una
+                        predilección por las armas pesadas.
+                    </p>
+                    <h2>Mutascorpius</h2>
+                    <p>
+                        Son escorpiones mutados que han crecido enormemente en tamaño y agresividad debido a la
+                        radiación. Tienen un veneno potente y son conocidos por su capacidad para excavar rápidamente
+                        bajo tierra antes de atacar.
+                    </p>
+                </div>
+            </center>
         </div>
     </center>
 </body>
