--- a/Special.html
+++ b/Special.html
@@ -21,7 +21,7 @@
 
     <center>
         <header>
-            <img src="img/yeah.gif" alt="" width="5%" align="middle">LA PODEROSISIMA FALLOUT4-WEB
+            <img src="img/yeah.gif" alt="" width="5%" align="middle">FALLOUT4-WEB
         </header>
 
         <nav>
@@ -33,7 +33,7 @@
                     <h3><a href="Historia.html">HISTORIA</a></h3>
                 </li>
                 <li>
-                    <h3><a href="Entidades.html">ENTIDADES</a></h3>
+                    <h3><a href="Entidades.html">CRIATURAS</a></h3>
                 </li>
                 <li>
                     <h3><a href="Special.html">S.P.E.C.I.A.L.</a></h3>
@@ -43,20 +43,25 @@
     </center>
     <center>
         <div>
-            <h1>S.P.E.C.I.A.L.</h1>
-            <br>
-            <p>
-                SPECIAL es el sistema de atributos en que se basa toda la Saga Fallout, con excepción de Fallout:
-                Brotherhood of Steel. "SPECIAL" es el acrónimo para Strength, Perception , Endurance, Charisma,
-                Intelligence, Agility y Luck (en español: Fuerza, Percepción, Resistencia, Carisma, Inteligencia,
-                Agilidad y Suerte).
-            </p>
-            <p>
-                La jugabilidad es muy similar a la de Fallout 3 y Fallout: New Vegas. Entre sus características
-                adicionales se incluye un nuevo sistema de armadura (que recuerda al sistema de armadura de The Elder
-                Scrolls III: Morrowind), un sistema de diálogos dinámico, un sistema de fabricación que utiliza muchos
-                de los objetos del juego como materia prima y mucho más
-            </p>
+            <center>
+                <h1>S.P.E.C.I.A.L.</h1>
+            </center>
+            <center>
+                <div>
+                    <p>
+                        SPECIAL es el sistema de atributos en que se basa toda la Saga Fallout, con excepción de Fallout:
+                        Brotherhood of Steel. "SPECIAL" es el acrónimo para Strength, Perception , Endurance, Charisma,
+                        Intelligence, Agility y Luck (en español: Fuerza, Percepción, Resistencia, Carisma, Inteligencia,
+                        Agilidad y Suerte).
+                    </p>
+                    <p>
+                        La jugabilidad es muy similar a la de Fallout 3 y Fallout: New Vegas. Entre sus características
+                        adicionales se incluye un nuevo sistema de armadura (que recuerda al sistema de armadura de The Elder
+                        Scrolls III: Morrowind), un sistema de diálogos dinámico, un sistema de fabricación que utiliza muchos
+                        de los objetos del juego como materia prima y mucho más
+                    </p>
+                </div>
+            </center>
         </div>
     </center>
 
