--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
 
-        <center><img src="img/yeah.gif" alt="" width="5%" align="middle">LA PODEROSISIMA FALLOUT4-WEB</center>
+        <center><img src="img/yeah.gif" alt="" width="5%" align="middle">FALLOUT4-WEB</center>
     </header>
     <center>
 
@@ -33,7 +33,7 @@
                     <h3><a href="Historia.html">HISTORIA</a></h3>
                 </li>
                 <li>
-                    <h3><a href="Entidades.html">ENTIDADES</a></h3>
+                    <h3><a href="Entidades.html">CRIATURAS</a></h3>
                 </li>
                 <li>
                     <h3><a href="Special.html">S.P.E.C.I.A.L.</a></h3>
