--- a/Entidades.html
+++ b/Entidades.html
@@ -62,35 +62,49 @@
                         Esta es una versión mutada y gigantesca de la cucaracha común. Son rápidos y ágiles, y a menudo
                         se encuentran en áreas infestadas de radiación.
                     </p>
+                    <img src="img/Mutaracha.jpg" alt="" width="40%">
                     <h2>Mirelurks</h2>
                     <p>
                         Son una especie de crustáceos mutados que han evolucionado para adaptarse al medio ambiente
                         radiactivo. Vienen en varias formas, incluyendo Mirelurks comunes, Mirelurk cazadores y Mirelurk
                         reyes. Son conocidos por su caparazón duro y sus poderosas garras.
                     </p>
+                    <img src="img/Mirelurks.jpg" alt="" width="40%">
                     <h2>Necrofagos</h2>
                     <p>
                         Son humanos que han sido expuestos a una cantidad masiva de radiación y han sufrido una
                         degeneración mental y física. Se vuelven hostiles y agresivos hacia cualquier ser vivo que
                         encuentren. Los Necrofagos vienen en diferentes formas y tamaños.
                     </p>
+                    <img src="img/Necrofago.jpg" alt="" width="24%">
                     <h2>Sanginarios</h2>
                     <p>
                         Son depredadores gigantescos y extremadamente peligrosos que se asemejan a dinosaurios mutantes.
                         Son rápidos, fuertes y altamente resistentes, con garras afiladas y mandíbulas poderosas. Son
                         considerados una de las criaturas más mortales del yermo.
                     </p>
+                    <img src="img/sanguinario.png" alt="" width="25%">
                     <h2>Supermutantes</h2>
                     <p>
                         Son humanos que han sido sometidos a experimentos genéticos y están infectados con FEV (Forced
                         Evolutionary Virus). Son altos, musculosos y agresivos, con una resistencia sobrehumana y una
                         predilección por las armas pesadas.
                     </p>
+                    <img src="img/supermutante.png" alt="" width="20%">
                     <h2>Mutascorpius</h2>
                     <p>
                         Son escorpiones mutados que han crecido enormemente en tamaño y agresividad debido a la
                         radiación. Tienen un veneno potente y son conocidos por su capacidad para excavar rápidamente
                         bajo tierra antes de atacar.
+                    </p>
+                    <img src="img/Mutascorpius.png" alt="" width="40%">
+                </div>
+            </center>
+            <center>
+                <div>
+                    <p>Estas son solo algunas de las muchas criaturas que se encuentran en el mundo de "Fallout 4". Cada
+                        una presenta sus propios desafíos únicos y añade una capa adicional de peligro y emoción al
+                        explorar el yermo post-apocalíptico.
                     </p>
                 </div>
             </center>
