--- a/Special.html
+++ b/Special.html
@@ -9,10 +9,10 @@
     <title>S.P.E.C.I.A.L.</title>
     <style>
         body {
-            background-image: url(img/fallouut.jpg);
+            background-image: url(img/Perks.jpg);
             background-repeat: no-repeat;
             background-size: cover;
-            background-attachment: fixed;
+
         }
     </style>
 </head>
@@ -49,17 +49,59 @@
             <center>
                 <div>
                     <p>
-                        SPECIAL es el sistema de atributos en que se basa toda la Saga Fallout, con excepción de Fallout:
+                        SPECIAL es el sistema de atributos en que se basa toda la Saga Fallout, con excepción de
+                        Fallout:
                         Brotherhood of Steel. "SPECIAL" es el acrónimo para Strength, Perception , Endurance, Charisma,
-                        Intelligence, Agility y Luck (en español: Fuerza, Percepción, Resistencia, Carisma, Inteligencia,
+                        Intelligence, Agility y Luck (en español: Fuerza, Percepción, Resistencia, Carisma,
+                        Inteligencia,
                         Agilidad y Suerte).
                     </p>
+                </div>
+            </center>
+            <center>
+                <div>
+                    <h2>S - Strength (Fuerza)</h2>
                     <p>
-                        La jugabilidad es muy similar a la de Fallout 3 y Fallout: New Vegas. Entre sus características
-                        adicionales se incluye un nuevo sistema de armadura (que recuerda al sistema de armadura de The Elder
-                        Scrolls III: Morrowind), un sistema de diálogos dinámico, un sistema de fabricación que utiliza muchos
-                        de los objetos del juego como materia prima y mucho más
+                        Determina la capacidad de tu personaje para llevar y usar armas pesadas, causar daño cuerpo a
+                        cuerpo y llevar más objetos en su inventario.
                     </p>
+                    <img src="img/S.gif" alt="" class="imagen">
+                    <h2>P - Perception (Percepción)</h2>
+                    <p>
+                        Afecta la capacidad de tu personaje para percibir enemigos y objetos en el entorno, aumentando
+                        la precisión en el combate y mejorando las habilidades relacionadas con la percepción.
+                    </p>
+                    <img src="img/P.gif" alt="">
+                    <h2>E - Endurance (Aguante)</h2>
+                    <p>
+                        Determina la salud máxima de tu personaje y su resistencia a daños y enfermedades. También
+                        influye en la resistencia al agotamiento y la capacidad para sobrevivir en ambientes hostiles.
+                    </p>
+                    <img src="img/E.png" alt="">
+                    <h2>C - Charisma (Carisma)</h2>
+                    <p>
+                        Afecta la capacidad de tu personaje para interactuar con otros personajes, persuadir, negociar y
+                        liderar. También influye en las opciones de diálogo disponibles.
+                    </p>
+                    <img src="img/C.gif" alt="">
+                    <h2>I - Intelligence (Inteligencia)</h2>
+                    <p>
+                        Determina la eficacia de tu personaje en el uso y mantenimiento de tecnología, así como su
+                        capacidad para aprender y mejorar habilidades a lo largo del juego.
+                    </p>
+                    <img src="img/I.gif" alt="">
+                    <h2>A - Agility (Agilidad)</h2>
+                    <p>
+                        Afecta la velocidad de movimiento, la recarga de acción, la capacidad de esquivar ataques y del
+                        sigilo.
+                    </p>
+                    <img src="img/A.gif" alt="">
+                    <h2>L - Luck (Suerte)</h2>
+                    <p>
+                        Influye en la probabilidad de éxito en acciones aleatorias, encuentros inesperados y la calidad
+                        de los objetos encontrados.
+                    </p>
+                    <img src="img/L.gif" alt="">
                 </div>
             </center>
         </div>
